docs: fixiere Projekt-Rahmen (Canvas/Prozesse/NFR/Security/Compliance, ADR-0001)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,26 @@
 name: ci
-on:
-  pull_request:
-    branches: [main]
+on: [pull_request]
 jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "ci bootstrap ok"
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+      - run: npm ci
+      - name: Codegen from OpenAPI
+        run: npx openapi-typescript apps/api/openapi/lokaltreu-openapi-v2.0.yaml -o packages/types/src/index.d.ts
+      - name: Lint
+        run: npm run lint
+      - name: Build
+        run: npm run build
+      - name: Unit + Contract tests
+        run: npm test --workspaces -- --coverage
+      - name: Enforce coverage≥80%
+        run: node .github/scripts/check-coverage.mjs
+      - name: Spectral OpenAPI lint
+        run: npx @stoplight/spectral-cli lint apps/api/openapi/lokaltreu-openapi-v2.0.yaml
+      - name: Schema drift = 0
+        run: node .github/scripts/check-schema-drift.mjs
