--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,7 +2,21 @@
   "name": "@lokaltreu/api",
   "private": true,
   "type": "module",
+  "scripts": {
+    "build": "tsc -p tsconfig.json",
+    "test": "vitest run"
+  },
   "dependencies": {
+    "@noble/ed25519": "^2.1.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.55.3",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.203.0",
+    "@opentelemetry/sdk-node": "^0.203.0",
+    "@upstash/redis": "^1.29.3",
+    "express": "^4.19.2",
     "tweetnacl": "^1.0.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "vitest": "^3.2.4"
   }
 }
