--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "lokaltreu",
   "private": true,
-  "workspaces": ["apps/*","packages/*"],
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
     "codegen": "openapi-typescript apps/api/openapi/lokaltreu-openapi-v2.0.yaml -o packages/types/src/index.d.ts",
-    "lint": "echo \"[PLACEHOLDER] lint skipped\"",
+    "codegen:types": "openapi-typescript apps/api/openapi/lokaltreu-openapi-v2.0.yaml -o packages/types/src/index.d.ts",
+    "lint": "node scripts/no-manual-types.mjs && node scripts/lint-problem-json.mjs && node scripts/check-idempotency-placement.mjs && node scripts/log-scan.mjs",
     "build": "npm run -w apps/api build && npm run -w apps/web build",
     "test": "vitest run",
     "test:contract": "vitest run tests/contract",
@@ -14,20 +18,27 @@
     "test:device-proof": "echo \"[PLACEHOLDER] device-proof skipped\"",
     "test:anti-replay": "echo \"[PLACEHOLDER] anti-replay skipped\"",
     "test:ratelimits": "echo \"[PLACEHOLDER] ratelimits skipped\"",
-    "smoke": "node scripts/smoke.js",
+    "test:smoke": "npm run smoke",
+    "smoke": "node scripts/smoke.mjs",
     "mock": "prism mock apps/api/openapi/lokaltreu-openapi-v2.0.yaml -p 4010",
-    "check:no-manual-api-types": "node scripts/no-manual-types.js",
+    "check:no-manual-api-types": "node scripts/no-manual-types.mjs",
     "pr:lint": "node scripts/pr-lint.js"
   },
   "devDependencies": {
-    "@stoplight/spectral-cli": "^6.0.0",
     "@stoplight/prism-cli": "^5.10.0",
-    "openapi-typescript": "^6.7.0",
-    "vitest": "^1.5.0",
+    "@stoplight/spectral-cli": "^6.0.0",
     "chai": "^4.4.1",
     "chai-openapi-response-validator": "^0.14.2",
+    "eslint": "^9.0.0",
+    "openapi-typescript": "^6.7.0",
     "p-limit": "^6.0.0",
     "typescript": "^5.6.0",
-    "eslint": "^9.0.0"
+    "vitest": "^3.2.4"
+  },
+  "overrides": {
+    "@opentelemetry/sdk-node": "0.203.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "0.203.0",
+    "@opentelemetry/sdk-trace-base": "2.0.1",
+    "@opentelemetry/sdk-trace-node": "2.0.1"
   }
 }
