--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,20 +3,32 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "test": "vitest run"
+    "build": "tsc -p ./tsconfig.json",
+    "test": "vitest run",
+    "dev": "node ./src/index.ts"
   },
   "dependencies": {
+    "@lokaltreu/config": "0.1.0",
+    "@lokaltreu/types": "0.1.0",
     "@noble/ed25519": "^2.1.0",
     "@opentelemetry/auto-instrumentations-node": "^0.55.3",
     "@opentelemetry/exporter-trace-otlp-grpc": "^0.203.0",
     "@opentelemetry/sdk-node": "^0.203.0",
     "@upstash/redis": "^1.29.3",
     "express": "^4.19.2",
+    "fastify": "^5.6.1",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
     "vitest": "^3.2.4"
-  }
+  },
+  "version": "0.1.0",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
