--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "web",
+  "name": "@lokaltreu/web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "tsc -p ./tsconfig.json",
     "start": "next start",
     "lint": "eslint",
     "test": "vitest run"
   },
   "dependencies": {
+    "@lokaltreu/types": "0.1.0",
     "autoprefixer": "^10.4.21",
     "next": "15.5.4",
     "postcss": "^8.5.6",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@rolldown/pluginutils": "^1.0.0-beta.43",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@types/node": "^20",
@@ -29,7 +31,13 @@
     "eslint-config-next": "15.5.4",
     "jsdom": "^24.1.0",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5",
+    "typescript": "^5.9.3",
     "vitest": "^3.2.4"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
+  "main": "next.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "module"
 }
