--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
   "name": "lokaltreu",
-  "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
+  "private": "true",
   "scripts": {
     "codegen": "openapi-typescript apps/api/openapi/lokaltreu-openapi-v2.0.yaml -o packages/types/src/index.d.ts",
     "codegen:types": "openapi-typescript apps/api/openapi/lokaltreu-openapi-v2.0.yaml -o packages/types/src/index.d.ts",
-    "lint": "node scripts/no-manual-types.mjs && node scripts/lint-problem-json.mjs && node scripts/check-idempotency-placement.mjs && node scripts/log-scan.mjs",
-    "build": "npm run -w apps/api build && npm run -w apps/web build",
-    "test": "vitest run",
+    "lint": "eslint . --ext .ts,.tsx --max-warnings=0",
+    "build": "npm run -ws build",
+    "test": "vitest --run",
     "test:contract": "vitest run tests/contract",
     "test:replay": "vitest run tests/security/replay",
     "test:device": "vitest run tests/security/device",
@@ -22,23 +18,40 @@
     "smoke": "node scripts/smoke.mjs",
     "mock": "prism mock apps/api/openapi/lokaltreu-openapi-v2.0.yaml -p 4010",
     "check:no-manual-api-types": "node scripts/no-manual-types.mjs",
-    "pr:lint": "node scripts/pr-lint.js"
+    "pr:lint": "node scripts/pr-lint.js",
+    "dev": "npm run -w @lokaltreu/api dev",
+    "openapi:lint": "spectral lint apps/api/openapi/lokaltreu-openapi-v2.0.yaml",
+    "types:gen": "npx openapi-typescript apps/api/openapi/lokaltreu-openapi-v2.0.yaml -o packages/types/src/index.d.ts",
+    "check": "npm run lint && npm run types:gen && npm run -ws build",
+    "lint:openapi": "spectral lint apps/api/openapi/lokaltreu-openapi-v2.0.yaml"
   },
-  "devDependencies": {
-    "@stoplight/prism-cli": "^5.10.0",
-    "@stoplight/spectral-cli": "^6.0.0",
-    "chai": "^4.4.1",
-    "chai-openapi-response-validator": "^0.14.2",
-    "eslint": "^9.0.0",
-    "openapi-typescript": "^6.7.0",
-    "p-limit": "^6.0.0",
-    "typescript": "^5.6.0",
-    "vitest": "^3.2.4"
+  "version": "0.1.0",
+  "description": "SSOT: apps/api/openapi/lokaltreu-openapi-v2.0.yaml (vollständig, eingecheckt). Typen werden generiert. Priorität: SPEC → OpenAPI → ARCH → AGENTS.md → Code. Siehe /AGENTS.md für Rollen, Gates, Rezepte.",
+  "main": "index.js",
+  "directories": {
+    "doc": "docs",
+    "test": "tests"
   },
-  "overrides": {
-    "@opentelemetry/sdk-node": "0.203.0",
-    "@opentelemetry/exporter-trace-otlp-grpc": "0.203.0",
-    "@opentelemetry/sdk-trace-base": "2.0.1",
-    "@opentelemetry/sdk-trace-node": "2.0.1"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Globator25/Lokaltreu.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Globator25/Lokaltreu/issues"
+  },
+  "homepage": "https://github.com/Globator25/Lokaltreu#readme",
+  "workspaces": [
+    "apps/*",
+    "packages/*",
+    "apps/*",
+    "packages/*"
+  ],
+  "volta": {
+    "node": "20.19.5",
+    "npm": "10.9.2"
+  },
+  "packageManager": "npm@10.9.2"
 }
