chore(agents): add npm script for AGENTS.md sentinel check

--- a/package.json
+++ b/package.json
@@ -3,51 +3,73 @@
   "version": "0.0.0",
   "private": true,
   "packageManager": "npm@10.9.2",
-  "workspaces": {
-    "packages": [
-      "apps/*",
-      "packages/*"
-    ]
-  },
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
+    "dev": "node apps/api/src/dev-server.mjs",
+    "dev:stub": "node apps/api/src/dev-server.mjs",
+    "dev:stub:3001": "cross-env PORT=3001 node apps/api/src/dev-server.mjs",
     "build": "npm run build -w @lokaltreu/api && npm run build -w @lokaltreu/web",
-    "codegen": "npm run codegen -w @lokaltreu/types",
-    "lint": "eslint apps/api packages tests --ext .ts,.tsx,.js --max-warnings 0 && npm run -w @lokaltreu/web lint",
     "typecheck": "tsc -b --pretty false",
+    "lint": "eslint apps/api packages tests --ext .ts,.tsx,.js --max-warnings 0 && npm run -w @lokaltreu/web lint",
+    "openapi:types": "openapi-typescript apps/api/openapi/lokaltreu-openapi-v2.0.yaml -o packages/types/src/index.d.ts",
+    "oas:lint": "spectral lint apps/api/openapi/lokaltreu-openapi-v2.0.yaml",
+    "openapi:lint": "spectral lint apps/api/openapi/lokaltreu-openapi-v2.0.yaml",
+    "oas:bundle": "redocly bundle apps/api/openapi/lokaltreu-openapi-v2.0.yaml -o artifacts/lokaltreu-openapi.yaml",
+    "contract": "npm run -w packages/types types:codegen && npm run -w @lokaltreu/api test:contract",
+    "contract:mock": "prism mock artifacts/lokaltreu-openapi.yaml -p 4010",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "contract": "npm run -w packages/types types:codegen && npm run -w apps/api test:contract",
-    "oas:lint": "spectral lint apps/api/openapi/lokaltreu-openapi-v2.0.yaml",
-    "oas:bundle": "redocly bundle apps/api/openapi/lokaltreu-openapi-v2.0.yaml -o artifacts/lokaltreu-openapi.yaml",
-    "schema:drift": "git diff --quiet -- packages/types/src/index.d.ts || (echo schema_drift && exit 2)",
-    "gdpr:check": "node ./tools/gdpr-check.mjs",
+    "test:anti-replay": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001 \"cross-env BASE_URL=http://127.0.0.1:3001 node tests/security/run-anti-replay.mjs\"",
+    "test:device-proof": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001 \"cross-env BASE_URL=http://127.0.0.1:3001 vitest run --config tests/device-proof/vitest.config.ts\"",
+    "test:plan-gate": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001 \"cross-env BASE_URL=http://127.0.0.1:3001 vitest run --config tests/plan/vitest.config.ts\"",
+    "test:contract": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001 \"cross-env BASE_URL=http://127.0.0.1:3001 vitest run --config tests/contract/vitest.config.ts\"",
+    "test:anti-replay:live": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001 \"cross-env BASE_URL=http://127.0.0.1:3001 node tests/security/run-anti-replay.mjs\"",
+    "test:device-proof:live": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001 \"cross-env BASE_URL=http://127.0.0.1:3001 vitest run --config tests/device-proof/vitest.config.ts\"",
+    "test:plan-gate:live": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001 \"cross-env BASE_URL=http://127.0.0.1:3001 vitest run --config tests/plan/vitest.config.ts\"",
+    "test:contract:live": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001 \"cross-env BASE_URL=http://127.0.0.1:3001 vitest run --config tests/contract/vitest.config.ts\"",
+    "test:sec:live": "npm run test:anti-replay:live && npm run test:device-proof:live && npm run test:plan-gate:live && npm run test:contract:live",
+    "coverage:sync": "pwsh -NoProfile -Command \"$srcs = @('apps/api/coverage/coverage-summary.json','apps/api/coverage/v8/coverage-summary.json'); foreach($s in $srcs){ if(Test-Path $s){ New-Item -ItemType Directory -Force -Path coverage | Out-Null; Copy-Item -Force $s coverage/coverage-summary.json; exit 0 } }; Write-Error 'coverage-summary.json nicht gefunden'; exit 1\"",
+    "enforce:coverage": "node ./scripts/enforce-coverage.js 80",
     "prepare": "husky",
     "gov:agents": "gh workflow run agents-ci.yml",
     "gov:protect": "pwsh ./scripts/protect-default-branch.ps1",
     "gov:links": "node ./tools/linkcheck.mjs",
-    "gov:sec": "vitest run tests/parallel/anti-replay.spec.ts apps/api/tests/mw/idempotency*.spec.ts apps/api/src/middleware/errors/*.spec.ts"
+    "gov:sec": "vitest run tests/parallel/anti-replay.spec.ts apps/api/tests/mw/idempotency*.spec.ts apps/api/src/middleware/errors/*.spec.ts",
+    "agents:sentinels": "pwsh -File scripts/agents-sentinel-check.ps1"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.8",
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
     "@next/eslint-plugin-next": "^16.0.1",
-    "@redocly/openapi-core": "^2.11.0",
     "@redocly/cli": "^1.25.0",
+    "@redocly/openapi-core": "^2.11.0",
     "@stoplight/prism-cli": "^5.14.2",
     "@stoplight/spectral-cli": "^6.15.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "@vitest/coverage-v8": "^4.0.7",
+    "chai": "^4.5.0",
     "chai-openapi-response-validator": "^0.14.2",
+    "cross-env": "^10.1.0",
+    "esbuild": "^0.25.12",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.13",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "next": "^14.2.13",
+    "node-fetch": "^3.3.2",
+    "openapi-typescript": "^7.10.1",
+    "p-limit": "^5.0.0",
     "prettier": "^3.4.2",
-    "typescript": "^5.3.3",
+    "start-server-and-test": "^2.1.2",
     "tsx": "^4.20.6",
-    "vitest": "^4.0.7"
+    "typescript": "^5.3.3",
+    "vitest": "^4.0.7",
+    "yaml": "^2.8.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,cjs,mjs,json,yml,yaml,md}": "prettier -w"
