--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,7 @@ name: release
 on:
   push:
     branches: [main]
+
 jobs:
   version_and_release:
     runs-on: ubuntu-latest
@@ -11,7 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with: { node-version: 20, cache: npm, registry-url: 'https://registry.npmjs.org' }
+        with:
+          node-version: 20
+          cache: npm
+          registry-url: https://registry.npmjs.org
       - run: npm ci
       - run: npm run version:ci
       - run: npm run release:ci
