ci(release): fix YAML quoting

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,21 +3,43 @@ on:
   push:
     branches: [main]
 
+concurrency:
+  group: release-${{ github.ref }}
+  cancel-in-progress: false
+
+permissions:
+  contents: write
+  packages: write
+  # id-token: write   # nur nötig, wenn du mit npm Provenance veröffentlichst
+
 jobs:
   version_and_release:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      packages: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # nötig für Tags/Changesets
+
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
           registry-url: https://registry.npmjs.org
+          # scope: '@dein-scope'  # falls Paket scoped ist
+
       - run: npm ci
-      - run: npm run version:ci
-      - run: npm run release:ci
+
+      - name: Configure git author
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+      - name: Version
+        run: npm run version:ci
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Publish
+        run: npm run release:ci
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
