--- a/.github/workflows/security-gates.yml
+++ b/.github/workflows/security-gates.yml
@@ -14,7 +14,7 @@ jobs:
         with: { node-version: 20, cache: npm }
 
       - name: Install
-        run: npm ci
+        run: npm ci --include=dev
 
       - name: Start API (test profile)
         run: npm run -w apps/api start:test &
@@ -22,10 +22,10 @@ jobs:
         run: npx wait-on http://localhost:3001/health
 
       - name: Anti-Replay
-        run: npm run test:security:replay
+        run: npm run -w apps/api test:security:replay
 
       - name: Device-Proof
-        run: npm run test:security:device-proof
+        run: npm run -w apps/api test:security:device-proof
 
       - name: Plan-Gate
-        run: npm run test:security:plan-gate
+        run: npm run -w apps/api test:security:plan-gate
