--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "test:plan-gate:live": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001 \"cross-env BASE_URL=http://127.0.0.1:3001 vitest run --config tests/plan/vitest.config.ts\"",
     "test:contract:live": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001 \"cross-env BASE_URL=http://127.0.0.1:3001 vitest run --config tests/contract/vitest.config.ts\"",
     "test:sec:live": "npm run test:anti-replay:live && npm run test:device-proof:live && npm run test:plan-gate:live && npm run test:contract:live",
+    "gdpr:docs:present": "node ./scripts/gdpr-docs-present.mjs",
+    "gdpr:dsr": "bash ./scripts/check-dsr-endpoints.sh",
+    "gdpr:logs": "node ./scripts/log-scan.mjs",
+    "terraform:ci": "pwsh -File ./scripts/ci-terraform-eu.ps1 && terraform -chdir=infra/terraform fmt -check && terraform -chdir=infra/terraform validate",
     "coverage:sync": "pwsh -NoProfile -Command \"$srcs = @('apps/api/coverage/coverage-summary.json','apps/api/coverage/v8/coverage-summary.json'); foreach($s in $srcs){ if(Test-Path $s){ New-Item -ItemType Directory -Force -Path coverage | Out-Null; Copy-Item -Force $s coverage/coverage-summary.json; exit 0 } }; Write-Error 'coverage-summary.json nicht gefunden'; exit 1\"",
     "enforce:coverage": "node ./scripts/enforce-coverage.js 80",
     "prepare": "husky",
@@ -41,7 +45,7 @@
     "gov:protect": "pwsh ./scripts/protect-default-branch.ps1",
     "gov:links": "node ./tools/linkcheck.mjs",
     "gov:sec": "vitest run tests/parallel/anti-replay.spec.ts apps/api/tests/mw/idempotency*.spec.ts apps/api/src/middleware/errors/*.spec.ts",
-    "agents:sentinels": "pwsh -File scripts/agents-sentinel-check.ps1",
+    "agents:sentinels": "pwsh -NoProfile -ExecutionPolicy Bypass -File ./scripts/agents-sentinel-check.ps1",
     "changeset": "changeset",
     "release:ci": "changeset publish",
     "version:ci": "changeset version && npm install && git add -A && git commit -m \"chore: version packages\""
@@ -64,7 +68,7 @@
     "esbuild": "^0.25.12",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.13",
-    "husky": "^9.1.6",
+    "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
     "next": "^14.2.13",
     "node-fetch": "^3.3.2",
