test(security): run specs directly; set API_BASE; keep /health gate

--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
     "contract:mock": "prism mock artifacts/lokaltreu-openapi.yaml -p 4010",
     "test": "vitest run",
     "test:coverage": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001/health \"vitest run --coverage\"",
-    "test:anti-replay": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001/health \"cross-env BASE_URL=http://127.0.0.1:3001 node tests/security/run-anti-replay.mjs\"",
-    "test:device-proof": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001/health \"cross-env BASE_URL=http://127.0.0.1:3001 vitest run --config tests/security/device-proof/vitest.config.ts\"",
-    "test:plan-gate": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001/health \"cross-env BASE_URL=http://127.0.0.1:3001 vitest run --config tests/security/plan/vitest.config.ts\"",
+    "test:anti-replay": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001/health \"cross-env API_BASE=http://127.0.0.1:3001 node tests/security/run-anti-replay.mjs\"",
+    "test:device-proof": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001/health \"cross-env API_BASE=http://127.0.0.1:3001 vitest run tests/security/device/device.spec.ts\"",
+    "test:plan-gate": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001/health \"cross-env API_BASE=http://127.0.0.1:3001 vitest run tests/security/plan/plan.spec.ts\"",
     "test:security:replay": "npm run test:anti-replay",
     "test:security:device-proof": "npm run test:device-proof",
     "test:security:plan-gate": "npm run test:plan-gate",
     "test:contract": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001 \"cross-env BASE_URL=http://127.0.0.1:3001 vitest run --config tests/contract/vitest.config.ts\"",
     "test:anti-replay:live": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001/health \"cross-env BASE_URL=http://127.0.0.1:3001 node tests/security/run-anti-replay.mjs\"",
     "test:device-proof:live": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001/health \"cross-env BASE_URL=http://127.0.0.1:3001 vitest run --config tests/device-proof/vitest.config.ts\"",
-    "test:plan-gate:live": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001/health \"cross-env BASE_URL=http://127.0.0.1:3001 vitest run --config tests/security/plan/vitest.config.ts\"",
+    "test:plan-gate:live": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001/health \"cross-env API_BASE=http://127.0.0.1:3001 vitest run tests/security/plan/plan.spec.ts\"",
     "test:contract:live": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001/health \"cross-env BASE_URL=http://127.0.0.1:3001 vitest run --config tests/contract/vitest.config.ts\"",
     "test:sec:live": "npm run test:anti-replay:live && npm run test:device-proof:live && npm run test:plan-gate:live && npm run test:contract:live",
-    "test:security:suites": "cross-env BASE_URL=http://127.0.0.1:3001 vitest run --config tests/security/plan/vitest.config.ts && cross-env BASE_URL=http://127.0.0.1:3001 vitest run --config tests/security/device-proof/vitest.config.ts && cross-env BASE_URL=http://127.0.0.1:3001 node tests/security/run-anti-replay.mjs",
+    "test:security:suites": "cross-env API_BASE=http://127.0.0.1:3001 vitest run tests/security/plan/plan.spec.ts && cross-env API_BASE=http://127.0.0.1:3001 vitest run tests/security/device/device.spec.ts && cross-env API_BASE=http://127.0.0.1:3001 node tests/security/run-anti-replay.mjs",
     "test:security:all": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001/health \"npm run test:security:suites\"",
     "gdpr:docs:present": "node ./scripts/gdpr-docs-present.mjs",
     "gdpr:dsr": "bash ./scripts/check-dsr-endpoints.sh",
