--- a/package.json
+++ b/package.json
@@ -36,12 +36,16 @@
     "test:sec:live": "npm run test:anti-replay:live && npm run test:device-proof:live && npm run test:plan-gate:live && npm run test:contract:live",
     "test:security:suites": "cross-env API_BASE=http://127.0.0.1:3001 vitest run tests/security/plan/plan.spec.ts && cross-env API_BASE=http://127.0.0.1:3001 vitest run tests/security/device/device.spec.ts && cross-env API_BASE=http://127.0.0.1:3001 vitest run tests/security/replay/replay.spec.ts",
     "test:security:all": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001/health \"npm run test:security:suites\"",
+    "stub:server": "node scripts/stub-server.js",
+    "test:security": "vitest run tests/security/**/*.spec.ts",
+    "test:security:with-stub": "start-server-and-test \"npm:stub:server\" http://127.0.0.1:3001/health \"npm run -s test:security\"",
+    "test:with-stub": "start-server-and-test \"npm:stub:server\" http://127.0.0.1:3001/health \"vitest run --coverage\"",
     "gdpr:docs:present": "node ./scripts/gdpr-docs-present.mjs",
     "gdpr:dsr": "bash ./scripts/check-dsr-endpoints.sh",
     "gdpr:logs": "node ./scripts/log-scan.mjs",
     "terraform:ci": "pwsh -File ./scripts/ci-terraform-eu.ps1 && terraform -chdir=infra/terraform fmt -check && terraform -chdir=infra/terraform validate",
-    "coverage:sync": "pwsh -NoProfile -Command \"$srcs = @('apps/api/coverage/coverage-summary.json','apps/api/coverage/v8/coverage-summary.json'); foreach($s in $srcs){ if(Test-Path $s){ New-Item -ItemType Directory -Force -Path coverage | Out-Null; Copy-Item -Force $s coverage/coverage-summary.json; exit 0 } }; Write-Error 'coverage-summary.json nicht gefunden'; exit 1\"",
-    "enforce:coverage": "node ./scripts/enforce-coverage.js 80",
+    "coverage:sync": "node scripts/coverage-sync.js",
+    "enforce:coverage": "node scripts/enforce-coverage.js --min=80",
     "prepare": "husky",
     "gov:agents": "gh workflow run agents-ci.yml",
     "gov:protect": "pwsh ./scripts/protect-default-branch.ps1",
@@ -66,6 +70,7 @@
     "@vitest/coverage-v8": "^4.0.7",
     "chai": "^4.5.0",
     "chai-openapi-response-validator": "^0.14.2",
+    "concurrently": "^8.2.2",
     "cross-env": "^10.1.0",
     "esbuild": "^0.25.12",
     "eslint": "^8.57.0",
