--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Tests + Coverage
-        run: npm test --workspaces -- --coverage
+      - name: Test (with coverage + stub)
+        run: npm run -s test:with-stub
 
       - name: Enforce coverage >= 80%
         run: npm run enforce:coverage
