docs(governance): add AGENTS.md v2.2-gold with sentinels chore(scripts): add coverage/gdpr/sentinel helpers for CI

--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "test:security:all": "start-server-and-test dev:stub:3001 http://127.0.0.1:3001/health \"npm run test:security:suites\"",
     "stub:server": "node scripts/stub-server.js",
     "test:security": "vitest run tests/security/**/*.spec.ts",
-    "test:security:with-stub": "start-server-and-test \"npm:stub:server\" http://127.0.0.1:3001/health \"npm run -s test:security\"",
-    "test:with-stub": "start-server-and-test \"npm:stub:server\" http://127.0.0.1:3001/health \"vitest run --coverage\"",
+    "test:security:with-stub": "start-server-and-test \"npm run stub:server --silent\" http://127.0.0.1:3001/health \"npm run -s test:security\"",
+    "test:with-stub": "start-server-and-test \"npm run stub:server --silent\" http://127.0.0.1:3001/health \"vitest run --coverage\"",
     "gdpr:docs:present": "node ./scripts/gdpr-docs-present.mjs",
     "gdpr:dsr": "bash ./scripts/check-dsr-endpoints.sh",
     "gdpr:logs": "node ./scripts/log-scan.mjs",
