--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test": "vitest run"
+    "test": "vitest run --config ../../vitest.config.web.cjs --coverage"
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
@@ -18,8 +18,9 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -27,9 +28,12 @@
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "jsdom": "^24.1.0",
+    "jsdom": "^24.1.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5",
     "vitest": "^3.2.4"
   }
 }
+
+
+
