ci: fix duplicate 'on', correct uses/with; stabilize gdpr and iac triggers

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,10 @@
-on:
-  workflow_dispatch: {}
 name: ci
 on:
-  pull_request:
-    branches: [main]
   push:
-    branches: [main]
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch: {}
 
 jobs:
   quality:
@@ -14,7 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with: { node-version: 20, cache: npm }
+        with:
+          node-version: 20
+          cache: npm
 
       - name: AGENTS.md sentinels
         shell: pwsh
@@ -46,4 +47,3 @@ jobs:
 
       - name: RFC7807 conformity checks
         run: npm run problemjson:check
-
