--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "agents:sentinels": "npm run -s agents:sentinel:node",
     "contract:check": "node scripts/contract-check.mjs",
     "test:with-stub": "cross-env STUB=1 vitest run --coverage",
-    "prepare": "husky"
+    "prepare": "husky",
+    "scan:logs:no-pii": "node scripts/gdpr/scan-logs-no-pii.mjs",
+    "security:api:start": "node apps/api/src/dev-server.js --port=4010 --profile=test",
+    "test:security:anti-replay": "node scripts/security/anti-replay.mjs",
+    "test:security:device-proof": "node scripts/security/device-proof.mjs",
+    "test:security:plan-gate": "node scripts/security/plan-gate.mjs"
   },
   "keywords": [],
   "author": "",
@@ -37,6 +42,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "cross-env": "^10.1.0",
     "eslint": "^9.37.0",
+    "glob": "^10.4.5",
     "husky": "^9.1.7",
     "typescript-eslint": "^8.45.0",
     "vitest": "^3.2.4"
