--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:plan": "node -e \"console.log('test:plan: skip web')\"",
+    "test:plan:file": "node -e \"console.log('test:plan:file: skip web')\""
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
