--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@lokaltreu/types": "file:../../packages/types",
     "@upstash/redis": "^1.36.0",
+    "husky": "^9.1.7",
     "jose": "^5.10.0",
     "libsodium-wrappers": "^0.7.15"
   },
