--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
+    "husky": "^9.1.7",
+    "libsodium-wrappers": "^0.7.15",
     "next": "15.5.9",
     "postcss": "^8.5.6",
     "react": "19.1.0",
