--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "node -e \"console.log('lint: skip @lokaltreu/types')\"",
     "build": "node -e \"console.log('build: skip @lokaltreu/types')\"",
-    "test": "node -e \"console.log('test: skip @lokaltreu/types')\"",
+    "test": "node -e \"console.log('test: skip @lokaltreu/types')\" --",
     "test:plan": "node -e \"console.log('test:plan: skip @lokaltreu/types')\"",
     "test:plan:file": "node -e \"console.log('test:plan:file: skip @lokaltreu/types')\""
   },
